src/NakeParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/NakeParser.y
-----------------------------------------------------------------------------

state 108 contains 1 reduce/reduce conflicts.

rule 62 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> TopLevelList                            (1)
	TopLevelList -> TopLevel TopLevelList              (2)
	TopLevelList -> TopLevel                           (3)
	TopLevel -> EnumDecl                               (4)
	TopLevel -> DerivingDecl                           (5)
	TopLevel -> InstanceDecl                           (6)
	TopLevel -> RuleDecl                               (7)
	EnumDecl -> enum ident '{' IdentList '}' ';'       (8)
	IdentList -> ident ';' IdentList                   (9)
	IdentList -> ident ';'                             (10)
	DerivingDecl -> deriving '[' BuiltinList ']' for ident ';'   (11)
	BuiltinList -> fmt ',' BuiltinList                 (12)
	BuiltinList -> fmt                                 (13)
	InstanceDecl -> instance ident for ident '{' AssignmentList '}' ';'   (14)
	InstanceDecl -> instance BuiltinIdent for ident '{' AssignmentList '}' ';'   (15)
	InstanceDecl -> instance ident '{' FunctionList '}' ';'   (16)
	BuiltinIdent -> fmt                                (17)
	AssignmentList -> Assignment AssignmentList        (18)
	AssignmentList -> Assignment                       (19)
	Assignment -> ident '=' Expr ';'                   (20)
	FunctionList -> Function FunctionList              (21)
	FunctionList -> Function                           (22)
	Function -> fn ident '(' ParamList ')' '{' StmtList '}' ';'   (23)
	ParamList -> ident ':' ident ',' ParamList         (24)
	ParamList -> ident ':' ident                       (25)
	ParamList -> self ':' ident ',' ParamList          (26)
	ParamList -> self ':' ident                        (27)
	ParamList ->                                       (28)
	StmtList -> Stmt StmtList                          (29)
	StmtList -> Stmt                                   (30)
	Stmt -> match ident '{' MatchArmList '}'           (31)
	Stmt -> Expr                                       (32)
	MatchArmList -> MatchArm ',' MatchArmList          (33)
	MatchArmList -> MatchArm                           (34)
	MatchArm -> Expr '=>' Expr                         (35)
	RuleDecl -> ident '=' '{' RuleFieldList '}' ';'    (36)
	RuleFieldList -> RuleField RuleFieldList           (37)
	RuleFieldList -> RuleField                         (38)
	RuleField -> flags '=' Expr ';'                    (39)
	RuleField -> src '=' Expr ';'                      (40)
	RuleField -> cmd '=' Expr ';'                      (41)
	RuleField -> cmds '=' Expr ';'                     (42)
	RuleField -> inputs '=' Expr ';'                   (43)
	RuleField -> dependencies '=' Expr ';'             (44)
	RuleField -> outputs '=' Expr ';'                  (45)
	Expr -> string                                     (46)
	Expr -> ident                                      (47)
	Expr -> glob string                                (48)
	Expr -> ident '(' ExprList ')'                     (49)
	Expr -> '[' ExprList ']'                           (50)
	Expr -> '{' RecordFieldList '}'                    (51)
	Expr -> file '{' RecordFieldList '}'               (52)
	Expr -> withFlake '{' RecordFieldList '}'          (53)
	Expr -> '$' ident                                  (54)
	Expr -> '$$' ident                                 (55)
	Expr -> ident '::' ident                           (56)
	Expr -> ident '.' ident                            (57)
	ExprList -> Expr ',' ExprList                      (58)
	ExprList -> Expr                                   (59)
	ExprList ->                                        (60)
	RecordFieldList -> RecordField RecordFieldList     (61)
	RecordFieldList -> RecordField                     (62)
	RecordFieldList ->                                 (63)
	RecordField -> ident '=' Expr ';'                  (64)
	RecordField -> name '=' Expr ';'                   (65)
	RecordField -> path '=' Expr ';'                   (66)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	enum           { T_Enum _ }
	instance       { T_Instance _ }
	deriving       { T_Deriving _ }
	fn             { T_Fn _ }
	self           { T_Self _ }
	match          { T_Match _ }
	flags          { T_Flags _ }
	src            { T_Src _ }
	cmd            { T_Cmd _ }
	cmds           { T_Cmds _ }
	dependencies   { T_Dependencies _ }
	inputs         { T_Inputs _ }
	outputs        { T_Outputs _ }
	file           { T_File _ }
	name           { T_Name _ }
	path           { T_Path _ }
	fmt            { T_Fmt _ }
	for            { T_For _ }
	glob           { T_Glob _ }
	withFlake      { T_WithFlake _ }
	ident          { T_Ident _ $$ }
	string         { T_String _ $$ }
	'{'            { T_LBrace _ }
	'}'            { T_RBrace _ }
	'['            { T_LBracket _ }
	']'            { T_RBracket _ }
	'('            { T_LParen _ }
	')'            { T_RParen _ }
	'::'           { T_DoubleColon _ }
	':'            { T_Colon _ }
	','            { T_Comma _ }
	';'            { T_Semi _ }
	'='            { T_Eq _ }
	'=>'           { T_Arrow _ }
	'.'            { T_Dot _ }
	'$$'           { T_MetaMetaFunc _ }
	'$'            { T_MetaVar _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	TopLevelList    rules 2, 3
	TopLevel        rules 4, 5, 6, 7
	EnumDecl        rule  8
	IdentList       rules 9, 10
	DerivingDecl    rule  11
	BuiltinList     rules 12, 13
	InstanceDecl    rules 14, 15, 16
	BuiltinIdent    rule  17
	AssignmentList  rules 18, 19
	Assignment      rule  20
	FunctionList    rules 21, 22
	Function        rule  23
	ParamList       rules 24, 25, 26, 27, 28
	StmtList        rules 29, 30
	Stmt            rules 31, 32
	MatchArmList    rules 33, 34
	MatchArm        rule  35
	RuleDecl        rule  36
	RuleFieldList   rules 37, 38
	RuleField       rules 39, 40, 41, 42, 43, 44, 45
	Expr            rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57
	ExprList        rules 58, 59, 60
	RecordFieldList rules 61, 62, 63
	RecordField     rules 64, 65, 66

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProgram -> . Program                    (rule 0)

	enum           shift, and enter state 8
	instance       shift, and enter state 9
	deriving       shift, and enter state 10
	ident          shift, and enter state 11

	Program        goto state 12
	TopLevelList   goto state 2
	TopLevel       goto state 3
	EnumDecl       goto state 4
	DerivingDecl   goto state 5
	InstanceDecl   goto state 6
	RuleDecl       goto state 7

State 1

	Program -> . TopLevelList                           (rule 1)

	enum           shift, and enter state 8
	instance       shift, and enter state 9
	deriving       shift, and enter state 10
	ident          shift, and enter state 11

	TopLevelList   goto state 2
	TopLevel       goto state 3
	EnumDecl       goto state 4
	DerivingDecl   goto state 5
	InstanceDecl   goto state 6
	RuleDecl       goto state 7

State 2

	Program -> TopLevelList .                           (rule 1)

	%eof           reduce using rule 1


State 3

	TopLevelList -> TopLevel . TopLevelList             (rule 2)
	TopLevelList -> TopLevel .                          (rule 3)

	enum           shift, and enter state 8
	instance       shift, and enter state 9
	deriving       shift, and enter state 10
	ident          shift, and enter state 11
	%eof           reduce using rule 3

	TopLevelList   goto state 19
	TopLevel       goto state 3
	EnumDecl       goto state 4
	DerivingDecl   goto state 5
	InstanceDecl   goto state 6
	RuleDecl       goto state 7

State 4

	TopLevel -> EnumDecl .                              (rule 4)

	enum           reduce using rule 4
	instance       reduce using rule 4
	deriving       reduce using rule 4
	ident          reduce using rule 4
	%eof           reduce using rule 4


State 5

	TopLevel -> DerivingDecl .                          (rule 5)

	enum           reduce using rule 5
	instance       reduce using rule 5
	deriving       reduce using rule 5
	ident          reduce using rule 5
	%eof           reduce using rule 5


State 6

	TopLevel -> InstanceDecl .                          (rule 6)

	enum           reduce using rule 6
	instance       reduce using rule 6
	deriving       reduce using rule 6
	ident          reduce using rule 6
	%eof           reduce using rule 6


State 7

	TopLevel -> RuleDecl .                              (rule 7)

	enum           reduce using rule 7
	instance       reduce using rule 7
	deriving       reduce using rule 7
	ident          reduce using rule 7
	%eof           reduce using rule 7


State 8

	EnumDecl -> enum . ident '{' IdentList '}' ';'      (rule 8)

	ident          shift, and enter state 18


State 9

	InstanceDecl -> instance . ident for ident '{' AssignmentList '}' ';'    (rule 14)
	InstanceDecl -> instance . BuiltinIdent for ident '{' AssignmentList '}' ';'    (rule 15)
	InstanceDecl -> instance . ident '{' FunctionList '}' ';'    (rule 16)

	fmt            shift, and enter state 16
	ident          shift, and enter state 17

	BuiltinIdent   goto state 15

State 10

	DerivingDecl -> deriving . '[' BuiltinList ']' for ident ';'    (rule 11)

	'['            shift, and enter state 14


State 11

	RuleDecl -> ident . '=' '{' RuleFieldList '}' ';'    (rule 36)

	'='            shift, and enter state 13


State 12

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 13

	RuleDecl -> ident '=' . '{' RuleFieldList '}' ';'    (rule 36)

	'{'            shift, and enter state 26


State 14

	DerivingDecl -> deriving '[' . BuiltinList ']' for ident ';'    (rule 11)

	fmt            shift, and enter state 25

	BuiltinList    goto state 24

State 15

	InstanceDecl -> instance BuiltinIdent . for ident '{' AssignmentList '}' ';'    (rule 15)

	for            shift, and enter state 23


State 16

	BuiltinIdent -> fmt .                               (rule 17)

	for            reduce using rule 17


State 17

	InstanceDecl -> instance ident . for ident '{' AssignmentList '}' ';'    (rule 14)
	InstanceDecl -> instance ident . '{' FunctionList '}' ';'    (rule 16)

	for            shift, and enter state 21
	'{'            shift, and enter state 22


State 18

	EnumDecl -> enum ident . '{' IdentList '}' ';'      (rule 8)

	'{'            shift, and enter state 20


State 19

	TopLevelList -> TopLevel TopLevelList .             (rule 2)

	%eof           reduce using rule 2


State 20

	EnumDecl -> enum ident '{' . IdentList '}' ';'      (rule 8)

	ident          shift, and enter state 44

	IdentList      goto state 43

State 21

	InstanceDecl -> instance ident for . ident '{' AssignmentList '}' ';'    (rule 14)

	ident          shift, and enter state 42


State 22

	InstanceDecl -> instance ident '{' . FunctionList '}' ';'    (rule 16)

	fn             shift, and enter state 41

	FunctionList   goto state 39
	Function       goto state 40

State 23

	InstanceDecl -> instance BuiltinIdent for . ident '{' AssignmentList '}' ';'    (rule 15)

	ident          shift, and enter state 38


State 24

	DerivingDecl -> deriving '[' BuiltinList . ']' for ident ';'    (rule 11)

	']'            shift, and enter state 37


State 25

	BuiltinList -> fmt . ',' BuiltinList                (rule 12)
	BuiltinList -> fmt .                                (rule 13)

	']'            reduce using rule 13
	','            shift, and enter state 36


State 26

	RuleDecl -> ident '=' '{' . RuleFieldList '}' ';'    (rule 36)

	flags          shift, and enter state 29
	src            shift, and enter state 30
	cmd            shift, and enter state 31
	cmds           shift, and enter state 32
	dependencies   shift, and enter state 33
	inputs         shift, and enter state 34
	outputs        shift, and enter state 35

	RuleFieldList  goto state 27
	RuleField      goto state 28

State 27

	RuleDecl -> ident '=' '{' RuleFieldList . '}' ';'    (rule 36)

	'}'            shift, and enter state 62


State 28

	RuleFieldList -> RuleField . RuleFieldList          (rule 37)
	RuleFieldList -> RuleField .                        (rule 38)

	flags          shift, and enter state 29
	src            shift, and enter state 30
	cmd            shift, and enter state 31
	cmds           shift, and enter state 32
	dependencies   shift, and enter state 33
	inputs         shift, and enter state 34
	outputs        shift, and enter state 35
	'}'            reduce using rule 38

	RuleFieldList  goto state 61
	RuleField      goto state 28

State 29

	RuleField -> flags . '=' Expr ';'                   (rule 39)

	'='            shift, and enter state 60


State 30

	RuleField -> src . '=' Expr ';'                     (rule 40)

	'='            shift, and enter state 59


State 31

	RuleField -> cmd . '=' Expr ';'                     (rule 41)

	'='            shift, and enter state 58


State 32

	RuleField -> cmds . '=' Expr ';'                    (rule 42)

	'='            shift, and enter state 57


State 33

	RuleField -> dependencies . '=' Expr ';'            (rule 44)

	'='            shift, and enter state 56


State 34

	RuleField -> inputs . '=' Expr ';'                  (rule 43)

	'='            shift, and enter state 55


State 35

	RuleField -> outputs . '=' Expr ';'                 (rule 45)

	'='            shift, and enter state 54


State 36

	BuiltinList -> fmt ',' . BuiltinList                (rule 12)

	fmt            shift, and enter state 25

	BuiltinList    goto state 53

State 37

	DerivingDecl -> deriving '[' BuiltinList ']' . for ident ';'    (rule 11)

	for            shift, and enter state 52


State 38

	InstanceDecl -> instance BuiltinIdent for ident . '{' AssignmentList '}' ';'    (rule 15)

	'{'            shift, and enter state 51


State 39

	InstanceDecl -> instance ident '{' FunctionList . '}' ';'    (rule 16)

	'}'            shift, and enter state 50


State 40

	FunctionList -> Function . FunctionList             (rule 21)
	FunctionList -> Function .                          (rule 22)

	fn             shift, and enter state 41
	'}'            reduce using rule 22

	FunctionList   goto state 49
	Function       goto state 40

State 41

	Function -> fn . ident '(' ParamList ')' '{' StmtList '}' ';'    (rule 23)

	ident          shift, and enter state 48


State 42

	InstanceDecl -> instance ident for ident . '{' AssignmentList '}' ';'    (rule 14)

	'{'            shift, and enter state 47


State 43

	EnumDecl -> enum ident '{' IdentList . '}' ';'      (rule 8)

	'}'            shift, and enter state 46


State 44

	IdentList -> ident . ';' IdentList                  (rule 9)
	IdentList -> ident . ';'                            (rule 10)

	';'            shift, and enter state 45


State 45

	IdentList -> ident ';' . IdentList                  (rule 9)
	IdentList -> ident ';' .                            (rule 10)

	ident          shift, and enter state 44
	'}'            reduce using rule 10

	IdentList      goto state 88

State 46

	EnumDecl -> enum ident '{' IdentList '}' . ';'      (rule 8)

	';'            shift, and enter state 87


State 47

	InstanceDecl -> instance ident for ident '{' . AssignmentList '}' ';'    (rule 14)

	ident          shift, and enter state 83

	AssignmentList goto state 86
	Assignment     goto state 82

State 48

	Function -> fn ident . '(' ParamList ')' '{' StmtList '}' ';'    (rule 23)

	'('            shift, and enter state 85


State 49

	FunctionList -> Function FunctionList .             (rule 21)

	'}'            reduce using rule 21


State 50

	InstanceDecl -> instance ident '{' FunctionList '}' . ';'    (rule 16)

	';'            shift, and enter state 84


State 51

	InstanceDecl -> instance BuiltinIdent for ident '{' . AssignmentList '}' ';'    (rule 15)

	ident          shift, and enter state 83

	AssignmentList goto state 81
	Assignment     goto state 82

State 52

	DerivingDecl -> deriving '[' BuiltinList ']' for . ident ';'    (rule 11)

	ident          shift, and enter state 80


State 53

	BuiltinList -> fmt ',' BuiltinList .                (rule 12)

	']'            reduce using rule 12


State 54

	RuleField -> outputs '=' . Expr ';'                 (rule 45)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 79

State 55

	RuleField -> inputs '=' . Expr ';'                  (rule 43)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 78

State 56

	RuleField -> dependencies '=' . Expr ';'            (rule 44)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 77

State 57

	RuleField -> cmds '=' . Expr ';'                    (rule 42)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 76

State 58

	RuleField -> cmd '=' . Expr ';'                     (rule 41)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 75

State 59

	RuleField -> src '=' . Expr ';'                     (rule 40)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 74

State 60

	RuleField -> flags '=' . Expr ';'                   (rule 39)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 64

State 61

	RuleFieldList -> RuleField RuleFieldList .          (rule 37)

	'}'            reduce using rule 37


State 62

	RuleDecl -> ident '=' '{' RuleFieldList '}' . ';'    (rule 36)

	';'            shift, and enter state 63


State 63

	RuleDecl -> ident '=' '{' RuleFieldList '}' ';' .    (rule 36)

	enum           reduce using rule 36
	instance       reduce using rule 36
	deriving       reduce using rule 36
	ident          reduce using rule 36
	%eof           reduce using rule 36


State 64

	RuleField -> flags '=' Expr . ';'                   (rule 39)

	';'            shift, and enter state 118


State 65

	Expr -> file . '{' RecordFieldList '}'              (rule 52)

	'{'            shift, and enter state 117


State 66

	Expr -> glob . string                               (rule 48)

	string         shift, and enter state 116


State 67

	Expr -> withFlake . '{' RecordFieldList '}'         (rule 53)

	'{'            shift, and enter state 115


State 68

	Expr -> ident .                                     (rule 47)
	Expr -> ident . '(' ExprList ')'                    (rule 49)
	Expr -> ident . '::' ident                          (rule 56)
	Expr -> ident . '.' ident                           (rule 57)

	match          reduce using rule 47
	file           reduce using rule 47
	glob           reduce using rule 47
	withFlake      reduce using rule 47
	ident          reduce using rule 47
	string         reduce using rule 47
	'{'            reduce using rule 47
	'}'            reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	'('            shift, and enter state 112
	')'            reduce using rule 47
	'::'           shift, and enter state 113
	','            reduce using rule 47
	';'            reduce using rule 47
	'=>'           reduce using rule 47
	'.'            shift, and enter state 114
	'$$'           reduce using rule 47
	'$'            reduce using rule 47


State 69

	Expr -> string .                                    (rule 46)

	match          reduce using rule 46
	file           reduce using rule 46
	glob           reduce using rule 46
	withFlake      reduce using rule 46
	ident          reduce using rule 46
	string         reduce using rule 46
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	'['            reduce using rule 46
	']'            reduce using rule 46
	')'            reduce using rule 46
	','            reduce using rule 46
	';'            reduce using rule 46
	'=>'           reduce using rule 46
	'$$'           reduce using rule 46
	'$'            reduce using rule 46


State 70

	Expr -> '{' . RecordFieldList '}'                   (rule 51)

	name           shift, and enter state 109
	path           shift, and enter state 110
	ident          shift, and enter state 111
	'}'            reduce using rule 63

	RecordFieldListgoto state 107
	RecordField    goto state 108

State 71

	Expr -> '[' . ExprList ']'                          (rule 50)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	']'            reduce using rule 60
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 105
	ExprList       goto state 106

State 72

	Expr -> '$$' . ident                                (rule 55)

	ident          shift, and enter state 104


State 73

	Expr -> '$' . ident                                 (rule 54)

	ident          shift, and enter state 103


State 74

	RuleField -> src '=' Expr . ';'                     (rule 40)

	';'            shift, and enter state 102


State 75

	RuleField -> cmd '=' Expr . ';'                     (rule 41)

	';'            shift, and enter state 101


State 76

	RuleField -> cmds '=' Expr . ';'                    (rule 42)

	';'            shift, and enter state 100


State 77

	RuleField -> dependencies '=' Expr . ';'            (rule 44)

	';'            shift, and enter state 99


State 78

	RuleField -> inputs '=' Expr . ';'                  (rule 43)

	';'            shift, and enter state 98


State 79

	RuleField -> outputs '=' Expr . ';'                 (rule 45)

	';'            shift, and enter state 97


State 80

	DerivingDecl -> deriving '[' BuiltinList ']' for ident . ';'    (rule 11)

	';'            shift, and enter state 96


State 81

	InstanceDecl -> instance BuiltinIdent for ident '{' AssignmentList . '}' ';'    (rule 15)

	'}'            shift, and enter state 95


State 82

	AssignmentList -> Assignment . AssignmentList       (rule 18)
	AssignmentList -> Assignment .                      (rule 19)

	ident          shift, and enter state 83
	'}'            reduce using rule 19

	AssignmentList goto state 94
	Assignment     goto state 82

State 83

	Assignment -> ident . '=' Expr ';'                  (rule 20)

	'='            shift, and enter state 93


State 84

	InstanceDecl -> instance ident '{' FunctionList '}' ';' .    (rule 16)

	enum           reduce using rule 16
	instance       reduce using rule 16
	deriving       reduce using rule 16
	ident          reduce using rule 16
	%eof           reduce using rule 16


State 85

	Function -> fn ident '(' . ParamList ')' '{' StmtList '}' ';'    (rule 23)

	self           shift, and enter state 91
	ident          shift, and enter state 92
	')'            reduce using rule 28

	ParamList      goto state 90

State 86

	InstanceDecl -> instance ident for ident '{' AssignmentList . '}' ';'    (rule 14)

	'}'            shift, and enter state 89


State 87

	EnumDecl -> enum ident '{' IdentList '}' ';' .      (rule 8)

	enum           reduce using rule 8
	instance       reduce using rule 8
	deriving       reduce using rule 8
	ident          reduce using rule 8
	%eof           reduce using rule 8


State 88

	IdentList -> ident ';' IdentList .                  (rule 9)

	'}'            reduce using rule 9


State 89

	InstanceDecl -> instance ident for ident '{' AssignmentList '}' . ';'    (rule 14)

	';'            shift, and enter state 136


State 90

	Function -> fn ident '(' ParamList . ')' '{' StmtList '}' ';'    (rule 23)

	')'            shift, and enter state 135


State 91

	ParamList -> self . ':' ident ',' ParamList         (rule 26)
	ParamList -> self . ':' ident                       (rule 27)

	':'            shift, and enter state 134


State 92

	ParamList -> ident . ':' ident ',' ParamList        (rule 24)
	ParamList -> ident . ':' ident                      (rule 25)

	':'            shift, and enter state 133


State 93

	Assignment -> ident '=' . Expr ';'                  (rule 20)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 132

State 94

	AssignmentList -> Assignment AssignmentList .       (rule 18)

	'}'            reduce using rule 18


State 95

	InstanceDecl -> instance BuiltinIdent for ident '{' AssignmentList '}' . ';'    (rule 15)

	';'            shift, and enter state 131


State 96

	DerivingDecl -> deriving '[' BuiltinList ']' for ident ';' .    (rule 11)

	enum           reduce using rule 11
	instance       reduce using rule 11
	deriving       reduce using rule 11
	ident          reduce using rule 11
	%eof           reduce using rule 11


State 97

	RuleField -> outputs '=' Expr ';' .                 (rule 45)

	flags          reduce using rule 45
	src            reduce using rule 45
	cmd            reduce using rule 45
	cmds           reduce using rule 45
	dependencies   reduce using rule 45
	inputs         reduce using rule 45
	outputs        reduce using rule 45
	'}'            reduce using rule 45


State 98

	RuleField -> inputs '=' Expr ';' .                  (rule 43)

	flags          reduce using rule 43
	src            reduce using rule 43
	cmd            reduce using rule 43
	cmds           reduce using rule 43
	dependencies   reduce using rule 43
	inputs         reduce using rule 43
	outputs        reduce using rule 43
	'}'            reduce using rule 43


State 99

	RuleField -> dependencies '=' Expr ';' .            (rule 44)

	flags          reduce using rule 44
	src            reduce using rule 44
	cmd            reduce using rule 44
	cmds           reduce using rule 44
	dependencies   reduce using rule 44
	inputs         reduce using rule 44
	outputs        reduce using rule 44
	'}'            reduce using rule 44


State 100

	RuleField -> cmds '=' Expr ';' .                    (rule 42)

	flags          reduce using rule 42
	src            reduce using rule 42
	cmd            reduce using rule 42
	cmds           reduce using rule 42
	dependencies   reduce using rule 42
	inputs         reduce using rule 42
	outputs        reduce using rule 42
	'}'            reduce using rule 42


State 101

	RuleField -> cmd '=' Expr ';' .                     (rule 41)

	flags          reduce using rule 41
	src            reduce using rule 41
	cmd            reduce using rule 41
	cmds           reduce using rule 41
	dependencies   reduce using rule 41
	inputs         reduce using rule 41
	outputs        reduce using rule 41
	'}'            reduce using rule 41


State 102

	RuleField -> src '=' Expr ';' .                     (rule 40)

	flags          reduce using rule 40
	src            reduce using rule 40
	cmd            reduce using rule 40
	cmds           reduce using rule 40
	dependencies   reduce using rule 40
	inputs         reduce using rule 40
	outputs        reduce using rule 40
	'}'            reduce using rule 40


State 103

	Expr -> '$' ident .                                 (rule 54)

	match          reduce using rule 54
	file           reduce using rule 54
	glob           reduce using rule 54
	withFlake      reduce using rule 54
	ident          reduce using rule 54
	string         reduce using rule 54
	'{'            reduce using rule 54
	'}'            reduce using rule 54
	'['            reduce using rule 54
	']'            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	';'            reduce using rule 54
	'=>'           reduce using rule 54
	'$$'           reduce using rule 54
	'$'            reduce using rule 54


State 104

	Expr -> '$$' ident .                                (rule 55)

	match          reduce using rule 55
	file           reduce using rule 55
	glob           reduce using rule 55
	withFlake      reduce using rule 55
	ident          reduce using rule 55
	string         reduce using rule 55
	'{'            reduce using rule 55
	'}'            reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	')'            reduce using rule 55
	','            reduce using rule 55
	';'            reduce using rule 55
	'=>'           reduce using rule 55
	'$$'           reduce using rule 55
	'$'            reduce using rule 55


State 105

	ExprList -> Expr . ',' ExprList                     (rule 58)
	ExprList -> Expr .                                  (rule 59)

	']'            reduce using rule 59
	')'            reduce using rule 59
	','            shift, and enter state 130


State 106

	Expr -> '[' ExprList . ']'                          (rule 50)

	']'            shift, and enter state 129


State 107

	Expr -> '{' RecordFieldList . '}'                   (rule 51)

	'}'            shift, and enter state 128


State 108

	RecordFieldList -> RecordField . RecordFieldList    (rule 61)
	RecordFieldList -> RecordField .                    (rule 62)

	name           shift, and enter state 109
	path           shift, and enter state 110
	ident          shift, and enter state 111
	'}'            reduce using rule 63
			(reduce using rule 62)


	RecordFieldListgoto state 127
	RecordField    goto state 108

State 109

	RecordField -> name . '=' Expr ';'                  (rule 65)

	'='            shift, and enter state 126


State 110

	RecordField -> path . '=' Expr ';'                  (rule 66)

	'='            shift, and enter state 125


State 111

	RecordField -> ident . '=' Expr ';'                 (rule 64)

	'='            shift, and enter state 124


State 112

	Expr -> ident '(' . ExprList ')'                    (rule 49)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	')'            reduce using rule 60
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 105
	ExprList       goto state 123

State 113

	Expr -> ident '::' . ident                          (rule 56)

	ident          shift, and enter state 122


State 114

	Expr -> ident '.' . ident                           (rule 57)

	ident          shift, and enter state 121


State 115

	Expr -> withFlake '{' . RecordFieldList '}'         (rule 53)

	name           shift, and enter state 109
	path           shift, and enter state 110
	ident          shift, and enter state 111
	'}'            reduce using rule 63

	RecordFieldListgoto state 120
	RecordField    goto state 108

State 116

	Expr -> glob string .                               (rule 48)

	match          reduce using rule 48
	file           reduce using rule 48
	glob           reduce using rule 48
	withFlake      reduce using rule 48
	ident          reduce using rule 48
	string         reduce using rule 48
	'{'            reduce using rule 48
	'}'            reduce using rule 48
	'['            reduce using rule 48
	']'            reduce using rule 48
	')'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'=>'           reduce using rule 48
	'$$'           reduce using rule 48
	'$'            reduce using rule 48


State 117

	Expr -> file '{' . RecordFieldList '}'              (rule 52)

	name           shift, and enter state 109
	path           shift, and enter state 110
	ident          shift, and enter state 111
	'}'            reduce using rule 63

	RecordFieldListgoto state 119
	RecordField    goto state 108

State 118

	RuleField -> flags '=' Expr ';' .                   (rule 39)

	flags          reduce using rule 39
	src            reduce using rule 39
	cmd            reduce using rule 39
	cmds           reduce using rule 39
	dependencies   reduce using rule 39
	inputs         reduce using rule 39
	outputs        reduce using rule 39
	'}'            reduce using rule 39


State 119

	Expr -> file '{' RecordFieldList . '}'              (rule 52)

	'}'            shift, and enter state 147


State 120

	Expr -> withFlake '{' RecordFieldList . '}'         (rule 53)

	'}'            shift, and enter state 146


State 121

	Expr -> ident '.' ident .                           (rule 57)

	match          reduce using rule 57
	file           reduce using rule 57
	glob           reduce using rule 57
	withFlake      reduce using rule 57
	ident          reduce using rule 57
	string         reduce using rule 57
	'{'            reduce using rule 57
	'}'            reduce using rule 57
	'['            reduce using rule 57
	']'            reduce using rule 57
	')'            reduce using rule 57
	','            reduce using rule 57
	';'            reduce using rule 57
	'=>'           reduce using rule 57
	'$$'           reduce using rule 57
	'$'            reduce using rule 57


State 122

	Expr -> ident '::' ident .                          (rule 56)

	match          reduce using rule 56
	file           reduce using rule 56
	glob           reduce using rule 56
	withFlake      reduce using rule 56
	ident          reduce using rule 56
	string         reduce using rule 56
	'{'            reduce using rule 56
	'}'            reduce using rule 56
	'['            reduce using rule 56
	']'            reduce using rule 56
	')'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	'=>'           reduce using rule 56
	'$$'           reduce using rule 56
	'$'            reduce using rule 56


State 123

	Expr -> ident '(' ExprList . ')'                    (rule 49)

	')'            shift, and enter state 145


State 124

	RecordField -> ident '=' . Expr ';'                 (rule 64)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 144

State 125

	RecordField -> path '=' . Expr ';'                  (rule 66)

	file           shift, and enter state 65
	glob           shift, and enter state 66
	withFlake      shift, and enter state 67
	ident          shift, and enter state 68
	string         shift, and enter state 69
	'{'            shift, and enter state 70
	'['            shift, and enter state 71
	'$$'           shift, and enter state 72
	'$'            shift, and enter state 73

	Expr           goto state 143

State 126

	RecordField -> name '=' . Expr ';'                  (rule 65)
